# netron-opt

./: .gitignore  package-lock.json  package.js  package.json  package.py
cpp/dagre-fast/: CMakeLists.txt  column.cpp  column.h  coord.cpp  coord.h  edge.cpp  edge.h  json_io.cpp  json_io.h  layout.cpp  layout.h  rank.cpp  rank.h  route.cpp  route.h
docs/superpowers/plans/: 2026-04-16-dagre-order-rust-prototype-plan.md  2026-04-23-dagre-fast-cpp-wasm-baseline-plan.md
docs/superpowers/reports/: 2026-04-16-dagre-order-rust-prototype-report.md
docs/superpowers/specs/: 2026-04-16-dagre-order-rust-prototype-design.md  2026-04-23-dagre-fast-cpp-wasm-baseline-design.md
rust/dagre-order-rs/: Cargo.toml  README.md
rust/dagre-order-rs/src/: graph.rs  lib.rs  model.rs  result.rs  util.rs
source/: app.js  base.js  browser.js  dagre-engine.js  dagre-fast-cpp.js  dagre-fast.js  dagre-order-rs.js  dagre-order.js  index.html  index.js  layout-d3dag.js  layout-engine.js  mycelium.js  server.py  view.js  worker.js
source/wasm/dagre-fast/: dagre_fast.js  dagre_fast.wasm
test/: dagre-compare.js  dagre-fast-block-regression.js  dagre-fast-cpp-baseline-smoke.js  dagre-fast-cpp-bridge.js  dagre-fast-cpp-build-script.js  dagre-fast-cpp-build-smoke.js  dagre-fast-cpp-compare.js  dagre-fast-cpp-fixtures.json  dagre-fast-engine-switch.js  dagre-fast-long-edge-anchors.js  dagre-order-compare.js  dagre-order-fixtures.json  layout-estimate.js  layout-options.js  models.js  playwright.config.js  viewport-benchmark.js  worker.js
tools/: build-dagre-fast-cpp.sh  build-dagre-order-rs.sh
(+7 files in other folders)
